--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.1.0",
-    "@angular/common": "^20.1.0",
-    "@angular/compiler": "^20.1.0",
-    "@angular/core": "^20.1.0",
-    "@angular/forms": "^20.1.0",
-    "@angular/platform-browser": "^20.1.0",
-    "@angular/platform-browser-dynamic": "^20.1.0",
-    "@angular/router": "^20.1.0",
+    "@angular/animations": "19.1.6",
+    "@angular/common": "19.1.6",
+    "@angular/compiler": "19.1.6",
+    "@angular/core": "19.1.6",
+    "@angular/forms": "19.1.6",
+    "@angular/platform-browser": "19.1.6",
+    "@angular/platform-browser-dynamic": "19.1.6",
+    "@angular/router": "19.1.6",
     "date-fns": "^2.30.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
@@ -30,9 +30,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.1.0",
-    "@angular/cli": "~20.1.0",
-    "@angular/compiler-cli": "^20.1.0",
+    "@angular-devkit/build-angular": "^19.1.0",
+    "@angular/cli": "19.1.0",
+    "@angular/compiler-cli": "19.1.6",
     "@types/jasmine": "~4.3.0",
     "angular-eslint": "20.1.1",
     "autoprefixer": "^10.4.16",
@@ -46,7 +46,6 @@
     "postcss": "^8.4.30",
     "prettier": "^3.6.2",
     "tailwindcss": "^3.3.3",
-    "typescript": "~5.8.3",
     "typescript-eslint": "8.34.1"
   }
 }
