--- a/angular.json
+++ b/angular.json
@@ -45,12 +45,27 @@
               "base": "dist/store"
             },
             "index": "src/index.html",
-            "polyfills": ["zone.js"],
+            "polyfills": [
+              "zone.js"
+            ],
             "tsConfig": "tsconfig.app.json",
-            "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.css"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
+            "styles": [
+              "src/styles.css"
+            ],
             "scripts": [],
-            "browser": "src/main.ts"
+            "browser": "src/main.ts",
+            "server": "src/main.server.ts",
+            "prerender": {
+              "discoverRoutes": false,
+              "routesFile": "routes.txt"
+            },
+            "ssr": {
+              "entry": "src/server.ts"
+            }
           },
           "configurations": {
             "production": {
@@ -140,25 +155,18 @@
       "type": "component"
     },
     "@schematics/angular:directive": {
-      "type": "directive"
     },
     "@schematics/angular:service": {
-      "type": "service"
     },
     "@schematics/angular:guard": {
-      "typeSeparator": "."
     },
     "@schematics/angular:interceptor": {
-      "typeSeparator": "."
     },
     "@schematics/angular:module": {
-      "typeSeparator": "."
     },
     "@schematics/angular:pipe": {
-      "typeSeparator": "."
     },
     "@schematics/angular:resolver": {
-      "typeSeparator": "."
     }
   }
 }
