--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "lint:fix": "ng lint --fix"
+    "lint:fix": "ng lint --fix",
+    "serve:ssr:store": "node dist/store/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -19,10 +20,13 @@
     "@angular/forms": "19.1.6",
     "@angular/platform-browser": "19.1.6",
     "@angular/platform-browser-dynamic": "19.1.6",
+    "@angular/platform-server": "19.1.6",
     "@angular/router": "19.1.6",
+    "@angular/ssr": "^19.1.0",
     "date-fns": "^2.30.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
+    "express": "^4.18.2",
     "prettier-eslint": "^16.4.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -33,7 +37,9 @@
     "@angular-devkit/build-angular": "^19.1.0",
     "@angular/cli": "19.1.0",
     "@angular/compiler-cli": "19.1.6",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^18.18.0",
     "angular-eslint": "20.1.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^9.29.0",
