--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "prettier-eslint": "^16.4.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "wavesurfer.js": "^7.3.2",
-    "zone.js": "~0.15.0"
+    "wavesurfer.js": "^7.3.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.1.0",
